fix: font layout shift

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,7 +21,12 @@
 html,
 body {
   direction: rtl;
-  font-family: "Estedad", "IRANSans", "vazirmatn", "Roboto", "sans-serif", -apple-system, BlinkMacSystemFont, Segoe UI,
+}
+
+html,
+body,
+.font-family-content {
+  font-family: "Estedad", "iransans", "vazirmatn", "Roboto", "sans-serif", -apple-system, BlinkMacSystemFont, Segoe UI,
     Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
@@ -36,14 +41,10 @@ h2,
 h3,
 h4,
 h5,
-h6 {
-  font-family: "onvan", "Estedad", "IRANSans", "vazirmatn", "Roboto", "sans-serif", -apple-system, BlinkMacSystemFont,
-    Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
+h6,
 .font-family-heading {
-  font-family: "onvan", "Estedad", "IRANSans", "vazirmatn", "Roboto", "sans-serif", -apple-system, BlinkMacSystemFont,
-    Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: onvan, "OnvanFallback", "Estedad", "IRANSans", "vazirmatn", "Roboto", "sans-serif", -apple-system,
+    BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 :root {
@@ -66,9 +67,6 @@ h6 {
     --side-menu-transition-time: 1ms;
   }
 }
-
-
-
 
 @media (max-width: 640px) {
   .aside {
